# ParTools

./: .gitignore  MANIFEST.in  PyPi_push.ps1  README.md  conf.py  conf_mail_gmail.txt  conf_main_default.py  conf_oracle_default.py  confidential.txt  crypto.py  doc.txt  extract_doc.py  fix_tnslsnr.py  format.ps1  memo.py  requirements.txt  runQDD.py  runReqList.py  runReqListMulti.py  runSQL.py  setup.cfg  setup.py  test.py  test_common.py  test_dq.py  test_mail.py  test_outlook.py  test_qdd.py  test_reqlist.py  test_sql.py  test_tools.py  toolBF.py  toolDup.py  toolFilter.py  toolParseXML.py  toolSplit.py
PyTools.egg-info/: PKG-INFO  SOURCES.txt
common/: __init__.py  csv.py  deco.py  file.py  g.py  header.py  log.py  mail.py  sTools.py  string.py  tools.py
conf/: conf_mail_nologin.txt  conf_main_default.py  conf_oracle_default.py
deploy/: PTconf.py  PTconf_perso.py  deploy.ps1  test.py
dq/: __init__.py  csf.py  empty_al.py  fill_al.py  functions.py  gl.py  gstf.py  init.py  main.py  sort.py
mail/: __init__.py  get.py  gl.py
partools/: __init__.py  changelog.py  conf.py
pytools/: __init__.py  conf.py  conf_main_default.py  fix_tnslsnr.py  runDQ.py  runReqList.py  runSQL.py  test.py  testProcess.py  testProcess2.py  toolBF.py  toolDup.py  toolFilter.py  toolParseXML.py  toolSplit.py
qdd/: __init__.py  csf.py  empty_al.py  fill_al.py  functions.py  gl.py  gstf.py  init.py  main.py  sort.py
quickstart/: dq.py  fix_tnslsnr.py  mail.py  reqlist.py  sTools.py  sql_connect.py  sql_dowload.py  sql_download.py  sql_execute.py  sql_upload.py  tools_bf.py  tools_dup.py  tools_extract_doc.py  tools_filter.py  tools_split.py  tools_xml.py
reqlist/: __init__.py  dl.py  dl_gko.py  dl_strd.py  file.py  functions.py  gl.py  join.py  log.py  main.py  process.py
run/: dq.py  fix_tnslsnr.py  reqlist.py  sql.py  sql_dowload.py  sql_execute.py  sql_upload.py  toolBF.py  toolDup.py  toolFilter.py  toolParseXML.py  toolSplit.py  tools_dup.py
scripts/: PyPi_push.ps1
sel/: ac.py  ar.py  ast.py  browse.py  cfg.py  decorators.py  parse.py
sql/: __init__.py  connect.py  download.py  execute.py  functions.py  gl.py  groupby.py  init.py  iutd.py  (+4 more)
(+422 files in other folders)
