[metadata]
name = PyTools
version = 1.0.0
author = Paul Arnaud
author_email = paularnaud2pro@gmail.com
description = This package contains a bunch of Python tools developped for Support / Test IT Engenieers
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/paularnaud2/PyTools
project_urls =
    Bug Tracker = https://github.com/paularnaud2/PyTools/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.6
install_requires =
    cx-Oracle
    pytest