[metadata]
name = ParTools
version = 1.0.2
author = Paul Arnaud
author_email = paularnaud2pro@gmail.com
description = This package contains a bunch of Python tools developed for Support, Test and Automation IT Engineers
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/paularnaud2/ParTools
project_urls =
    Bug Tracker = https://github.com/paularnaud2/ParTools/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.6
install_requires =
    flake8
    yapf
    pytest
    cx-Oracle
    pandas
    pywin32
